--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,9 +1,9 @@
 .nav__header{
     display: flex;
-    /* object-fit: contain; */
+    justify-content: flex-start;
+    object-fit: contain;
+    width: 50%;
     padding: 10px;
-    background-color: white;
-    border-bottom: 1px solid lightgray;
   }
   
   .nav__headerImage{
@@ -14,9 +14,4 @@
   
   .nav__header h3 {
     margin-left: 10px;
-  }
-
-  .user__buttons {
-    display: flex;
-    justify-content: flex-end;
   }
