work on device responsiveness:

--- a/src/App.css
+++ b/src/App.css
@@ -28,4 +28,18 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  margin-top: 6%;
 }
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 767px) {
+  .app__posts {
+    margin-top: 20%;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .app__posts {
+    margin-top: 9.1%;
+  }
+};
