--- a/src/ImageUpload.css
+++ b/src/ImageUpload.css
@@ -1,7 +1,7 @@
 .post__uploader{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 45%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
@@ -9,4 +9,10 @@
 
 .progress__bar{
     width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+    .post__uploader {
+        width: fit-content;
+    }
 }
