--- a/src/ImageUpload.css
+++ b/src/ImageUpload.css
@@ -11,8 +11,8 @@
     width: 100%;
 }
 
-@media screen and (max-width: 767px) {
+/* @media screen and (max-width: 767px) {
     .post__uploader {
         width: fit-content;
     }
-}
+} */
