--- a/src/Post.css
+++ b/src/Post.css
@@ -1,9 +1,9 @@
 .post {
-    background: white;
-    width: 600px;
-    /* max-width: 500px; */
-    border: 1px solid lightgray;
-    margin-bottom: 50px;
+  background: #fff;
+  border: 1px solid #d3d3d3;
+  margin-bottom: 2%;
+  margin-top: 6%;
+  width: 600px;
 }
 
 .post__image {
